Add custom theme

--- a/src/assets/locales/da.json
+++ b/src/assets/locales/da.json
@@ -541,7 +541,8 @@
         "gray": "Grå",
         "red": "Rød",
         "teal": "Blågrøn",
-        "blck": "BLCK"
+        "blck": "BLCK",
+        "custom": "custom"
       },
       "title": "Udseende"
     },
